--- a/views/partials/graph_gauge.ejs
+++ b/views/partials/graph_gauge.ejs
@@ -20,7 +20,7 @@
       cutoutPercentage: 64,
 
       onClick(...args) {
-        console.log(args);
+        // console.log(args);
       },
     },
   });
@@ -47,7 +47,7 @@
       cutoutPercentage: 64,
 
       onClick(...args) {
-        console.log(args);
+        // console.log(args);
       },
     },
   });
