--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -39,6 +39,34 @@
     </a>
   </li>
 
+  <li class="nav-item">
+    <a class="nav-link" href="/suhu">
+      <i class="fas fa-fw fa-hotel"></i>
+      <span>Suhu</span>
+    </a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/water">
+      <i class="fas fa-fw fa-hotel"></i>
+      <span>Water Level</span>
+    </a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/tanah">
+      <i class="fas fa-fw fa-hotel"></i>
+      <span>Kelembapan Tanah</span>
+    </a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/keruhair">
+      <i class="fas fa-fw fa-hotel"></i>
+      <span>TDS</span>
+    </a>
+  </li>
+
 
   <!-- Sidebar Toggler (Sidebar) -->
   <div class="text-center d-none d-md-inline">
