--- a/views/partials/graph2.ejs
+++ b/views/partials/graph2.ejs
@@ -11,7 +11,7 @@
 <script>
   function filterData() {
     var xmlhttp = new XMLHttpRequest();
-    var url = "http://localhost:4000/api/v1/suhu/get";
+    var url = "https://kirei-intern-server.herokuapp.com/api/v1/suhu/get";
     xmlhttp.open("GET", url, true);
     xmlhttp.send();
     xmlhttp.onreadystatechange = function () {
@@ -110,7 +110,7 @@
 
 <!-- <script>
   var xmlhttp = new XMLHttpRequest();
-  var url = "http://localhost:4000/api/v1/suhu/get";
+  var url = "https://kirei-intern-server.herokuapp.com/api/v1/suhu/get";
   xmlhttp.open("GET", url, true);
   xmlhttp.send();
   xmlhttp.onreadystatechange = function () {
