--- a/views/partials/js.ejs
+++ b/views/partials/js.ejs
@@ -1,4 +1,8 @@
-    
+    <script>
+      $('.dropdown').click(function(){
+        $('.dropdown-menu').toggleClass('show');
+      });
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js"></script>
     
     <!-- CHART -->
@@ -20,8 +24,7 @@
     <script src="/sb-admin-2/vendor/datatables/jquery.dataTables.min.js"></script>
     <script src="/sb-admin-2/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-    <!-- Page level custom scripts -->
-    <script src="/sb-admin-2/js/demo/datatables-demo.js"></script>
+
     <script src="https://cdn.ckeditor.com/4.14.0/standard/ckeditor.js"></script>
 
 
@@ -56,8 +59,6 @@
     <script src="/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <!-- AdminLTE App -->
     <script src="/adminlte/dist/js/adminlte.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="/adminlte/dist/js/demo.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
     <script src="/adminlte/dist/js/pages/dashboard.js"></script>
     <!-- DataTables  & Plugins -->
