--- a/views/admin/dashboard/view_dashboard.ejs
+++ b/views/admin/dashboard/view_dashboard.ejs
@@ -47,7 +47,7 @@
                     style="right: 0; left: auto"
                   >
                     <li>
-                      <a href="" class="dropdown-item"
+                      <a href="/setting" class="dropdown-item"
                         >My Profile</a
                       >
                     </li>         
@@ -478,7 +478,7 @@
             </div>
           </div>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid pb-lg-5 pb-4">
           <div class="col-lg-12 bg-white p-lg-5 p-3 card-graph">
             <h4 class="text-center">Data Suhu Celcius dan Humidity</h4>
             <div>
