--- a/views/admin/keruhAir/view_keruhair.ejs
+++ b/views/admin/keruhAir/view_keruhair.ejs
@@ -20,7 +20,7 @@
           <div class="container-fluid">
             <div class="row mb-2 align-items-center">
               <div class="col-sm-6">
-                <h1 class="title-dashboard">Kekeruhan Air/h1>
+                <h1 class="title-dashboard">Kekeruhan Air</h1>
               </div>
               <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
