--- a/views/partials/graph2.ejs
+++ b/views/partials/graph2.ejs
@@ -35,7 +35,6 @@
 
         const dates = timeCelcius;
         const datapoints = celcius;
-        console.log(dates)
         const dataGraph = {
           labels: dates,
           datasets: [
@@ -77,11 +76,12 @@
             },
           },
         };
+        // console.log(config.data.labels)
 
         // render init block
         const myChart = new Chart(document.getElementById("myChart"), config);
+        // console.log(myChart.config.data.labels)
         const dates2 = [...dates];
-        // console.log(dates2)
 
         const startdate = document.getElementById("startdate");
         const enddate = document.getElementById("enddate");
@@ -93,7 +93,8 @@
 
         // slice the array (pie) only showing the selected section / slice
         const filterDate = dates2.slice(indexstartdate, indexenddate + 1); //1 is index array
-        myChart.config.dataGraph.labels = filterDate;
+        console.log(myChart.config.data.datasets[0].data)
+        myChart.config.data.labels = filterDate;
 
         // data poinst
         const datapoints2 = [...datapoints];
@@ -101,7 +102,7 @@
           indexstartdate,
           indexenddate + 1
         ); //1 is index array
-        myChart.config.dataGraph.datasets[0].data = filterDataPoints;
+        myChart.config.data.datasets[0].data = filterDataPoints;
         myChart.update();
       }
     };
