--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -5,7 +5,7 @@
   <!-- Sidebar - Brand -->
   <a
     class="sidebar-brand d-flex align-items-center justify-content-center"
-    href="index.html"
+    href="#"
   >
     <div class="sidebar-brand-icon">
       <img src="/images/kirei-robot.png" alt="" height="50" width="45">
